Makes the default gamemode creative

--- a/server.properties
+++ b/server.properties
@@ -13,8 +13,8 @@ max-players=20
 allow-flight=off
 spawn-animals=on
 spawn-mobs=on
-gamemode=0
-force-gamemode=off
+gamemode=1
+force-gamemode=true
 hardcore=off
 pvp=on
 difficulty=1
